Corrigir pop-up e adicionar links/cards de avaliação
✅ Pop-up Corrigido:
- Melhorado carregamento com error handling
- Corrigida inserção de elementos no DOM
- Adicionado catch para erros de fetch

⭐ Card de Avaliação no Index:
- Adicionado card verde destacado
- Texto: 'Já foi atendido? Avalie seu atendimento'
- Clicável, redireciona para avaliacao.html

📱 Link no Menu Lateral:
- Adicionado em todas as páginas que têm menu
- Estilo verde/azul com gradiente
- Texto: '⭐ Avalie seu Atendimento'
- Páginas: index, avisos, fluxograma, painel, unidades

🔧 Páginas Modificadas:
- index.html (card + menu)
- avisos.html (menu)
- cadastro.html (correção pop-up)
- consulta-fila.html (correção pop-up)
- fluxograma.html (menu)
- painel.html (menu)
- termos.html (correção pop-up)
- unidades.html (menu)

--- a/avisos.html
+++ b/avisos.html
@@ -86,6 +86,7 @@
       <a class="drawer-item" href="consulta-fila.html">🔍 Consultar Fila</a>
       <a class="drawer-item" id="menuCadastro" href="cadastro.html" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; font-weight: 800;">📋 Cadastro na Fila</a>
       <a class="drawer-item" href="cadastro.html" style="background: linear-gradient(135deg, #ff6b9d 0%, #c41e3a 100%); color: white; font-weight: 800;">🤰 Gestantes: Cadastro e Cartilha</a>
+      <a class="drawer-item" href="avaliacao.html" style="background: linear-gradient(135deg, #1DC56F 0%, #0F8BD6 100%); color: white; font-weight: 800;">⭐ Avalie seu Atendimento</a>
       <a class="drawer-item" href="fluxograma.html">📊 Fluxograma</a>
       <a class="drawer-item" href="unidades.html">📍 Unidades</a>
       <a class="drawer-item" href="#" onclick="event.preventDefault(); mostrarDuvidasDocumentos(); document.getElementById('sideDrawer').classList.remove('open'); document.getElementById('drawerOverlay').classList.remove('show');">📄 Dúvidas sobre Documentos</a>
@@ -164,12 +165,18 @@
   <!-- Pop-up de Avaliação -->
   <script>
     fetch("avaliacao-popup.html")
-      .then(response => response.text())
+      .then(response => {
+        if (!response.ok) throw new Error('Erro ao carregar pop-up');
+        return response.text();
+      })
       .then(html => {
-        const div = document.createElement("div");
-        div.innerHTML = html;
-        document.body.appendChild(div);
-      });
+        const tempDiv = document.createElement("div");
+        tempDiv.innerHTML = html;
+        while (tempDiv.firstChild) {
+          document.body.appendChild(tempDiv.firstChild);
+        }
+      })
+      .catch(error => console.error('Erro ao carregar pop-up de avaliação:', error));
   </script>
 </body>
 </html>
