--- a/consulta-fila.html
+++ b/consulta-fila.html
@@ -485,12 +485,18 @@
   <!-- Pop-up de Avaliação -->
   <script>
     fetch("avaliacao-popup.html")
-      .then(response => response.text())
+      .then(response => {
+        if (!response.ok) throw new Error('Erro ao carregar pop-up');
+        return response.text();
+      })
       .then(html => {
-        const div = document.createElement("div");
-        div.innerHTML = html;
-        document.body.appendChild(div);
-      });
+        const tempDiv = document.createElement("div");
+        tempDiv.innerHTML = html;
+        while (tempDiv.firstChild) {
+          document.body.appendChild(tempDiv.firstChild);
+        }
+      })
+      .catch(error => console.error('Erro ao carregar pop-up de avaliação:', error));
   </script>
 </body>
 </html>
