Melhorias finais: botão voltar, pop-up no cantinho, cartilha e gestantes sempre abertas
✅ Botão Voltar na Avaliação:
- Adicionado botão circular no canto superior esquerdo
- Ícone de seta (←)
- Redireciona para index.html
- Hover com scale animation

⭐ Pop-up Corrigido (Cantinho Inferior Direito):
- Agora aparece no cantinho inferior direito (não mais centralizado)
- Animação slideInRight com bounce
- Animação pulse contínua (sombra pulsando)
- Balão estilo HQ com seta apontando para estrela
- Botão X para fechar
- Estrela com animação starBounce
- Width: 320px (responsivo)

📚 Cartilha da Gestante:
- Renomeado 'PNO .pdf' para 'pno.pdf' (sem espaço)
- Link atualizado no cadastro.html
- Botão de download aparece após cadastro de gestante

🤰 Gestantes SEMPRE Podem se Cadastrar:
- Mesmo quando cadastros comuns estão fechados
- Checkbox de gestante fica habilitado
- Mensagem especial no aviso: 'ATENÇÃO GESTANTES: O cadastro para gestantes continua ABERTO!'
- Ao marcar checkbox, todos os campos são habilitados
- Ao desmarcar, campos são desabilitados novamente
- Gestantes não entram na fila (tabela separada)

🔧 Lógica Implementada:
- Cadastros fechados → Formulário bloqueado
- EXCETO checkbox de gestante → Sempre habilitado
- Marcar gestante → Habilita todo o formulário
- Desmarcar gestante → Desabilita novamente

📱 Responsividade:
- Pop-up ajustado para mobile (300px)
- Botão voltar visível em todas as telas
- Animações otimizadas

--- a/avaliacao.html
+++ b/avaliacao.html
@@ -48,6 +48,30 @@
             }
         }
 
+        .back-btn {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            width: 50px;
+            height: 50px;
+            background: white;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s;
+            z-index: 1000;
+        }
+
+        .back-btn:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
+        }
+
         .header {
             background: linear-gradient(135deg, #1DC56F 0%, #0F8BD6 100%);
             color: white;
@@ -323,6 +347,9 @@
     </style>
 </head>
 <body>
+    <!-- Botão Voltar -->
+    <button class="back-btn" onclick="window.location.href='index.html'" aria-label="Voltar">←</button>
+    
     <div class="container">
         <div class="header">
             <h1>Avalie seu Atendimento</h1>
