Corrigir problema de dois modais abrindo
🐛 Bug Corrigido:
- Ao clicar em 'Sou Gestante', dois modais abriam
- Primeiro modal (bonito) dava para clicar
- Segundo modal (antigo) ficava travado

🔧 Causa do Problema:
- checkboxGestante.dispatchEvent(new Event('change'))
- Estava disparando outro listener que abria o modal antigo
- Conflito entre modal customizado e modal padrão

✅ Solução Implementada:
- Removido dispatchEvent que causava o segundo modal
- Mostrar campos de gestante MANUALMENTE
- document.getElementById('campos_gestante').style.display = 'block'
- Sem disparar evento change

🎯 Comportamento Agora:
1. Clica em 'Sou Gestante'
2. ✅ Modal bonito aparece (ÚNICO)
3. Clica em 'Continuar para o Cadastro'
4. ✅ Modal fecha
5. ✅ Formulário liberado
6. ✅ Checkbox marcado automaticamente
7. ✅ Campos de gestante aparecem
8. ✅ Sem segundo modal travado!

📱 Testado:
- Modal único
- Sem travamento
- Campos aparecem corretamente

--- a/cadastro.html
+++ b/cadastro.html
@@ -1341,7 +1341,12 @@
                         // Marcar automaticamente o checkbox de gestante
                         const checkboxGestante = document.getElementById('checkbox_gestante');
                         checkboxGestante.checked = true;
-                        checkboxGestante.dispatchEvent(new Event('change'));
+                        
+                        // Mostrar campos de gestante manualmente (sem disparar evento change)
+                        const camposGestante = document.getElementById('campos_gestante');
+                        if (camposGestante) {
+                            camposGestante.style.display = 'block';
+                        }
                         
                         // Scroll para o formulário
                         form.scrollIntoView({ behavior: 'smooth', block: 'start' });
