--- a/cadastro.html
+++ b/cadastro.html
@@ -1266,10 +1266,10 @@
                     btnSouGestante.addEventListener('click', function() {
                         // Mostrar aviso especial para gestantes com estilização customizada
                         const modalOverlay = document.createElement('div');
-                        modalOverlay.style.cssText = 'position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);display:flex;align-items:center;justify-content:center;z-index:10000;animation:fadeIn 0.3s';
+                        modalOverlay.style.cssText = 'position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);display:flex;align-items:center;justify-content:center;z-index:10000;animation:fadeIn 0.3s;padding:20px;overflow-y:auto';
                         
                         const modalBox = document.createElement('div');
-                        modalBox.style.cssText = 'background:linear-gradient(135deg, #fff3f3 0%, #ffe6f0 100%);border:4px solid #ff6b9d;border-radius:25px;padding:0;max-width:500px;width:90%;box-shadow:0 20px 60px rgba(0,0,0,0.4);animation:slideUp 0.4s;overflow:hidden';
+                        modalBox.style.cssText = 'background:linear-gradient(135deg, #fff3f3 0%, #ffe6f0 100%);border:4px solid #ff6b9d;border-radius:25px;padding:0;max-width:500px;width:90%;max-height:90vh;overflow-y:auto;box-shadow:0 20px 60px rgba(0,0,0,0.4);animation:slideUp 0.4s;margin:auto';
                         
                         modalBox.innerHTML = `
                             <style>
@@ -1281,7 +1281,7 @@
                                 <div style="font-size:80px;margin-bottom:15px;animation:heartbeat 1.5s infinite">🤰</div>
                                 <h2 style="color:white;font-size:2em;margin:0;font-weight:900;text-shadow:0 2px 10px rgba(0,0,0,0.3)">SEJA BEM-VINDA!</h2>
                             </div>
-                            <div style="padding:35px;text-align:center">
+                            <div style="padding:25px 20px;text-align:center">
                                 <div style="background:white;border-radius:15px;padding:25px;margin-bottom:25px;box-shadow:0 4px 15px rgba(0,0,0,0.1)">
                                     <h3 style="color:#c41e3a;font-size:1.5em;margin:0 0 15px;font-weight:900">💚 CADASTRO PARA GESTANTES ABERTO!</h3>
                                     <p style="color:#333;font-size:1.1em;line-height:1.6;margin:0">
