--- a/cadastro.html
+++ b/cadastro.html
@@ -532,7 +532,7 @@
                 <!-- Checkbox Gestante -->
                 <div class="form-group" id="container_gestante" style="background: #fff3f3; padding: 20px; border-radius: 12px; border: 2px solid #ff6b9d; opacity: 0.5; pointer-events: none;">
                     <label style="display: flex; align-items: center; gap: 10px; cursor: pointer; font-size: 1.1em; font-weight: 700; color: #c41e3a;">
-                        <input type="checkbox" id="checkbox_gestante" name="e_gestante" style="width: 20px; height: 20px; cursor: pointer;" disabled>
+                        <input type="checkbox" id="checkbox_gestante" name="e_gestante" style="width: 20px; height: 20px; cursor: pointer;">
                         <span>🤰 Você é gestante?</span>
                     </label>
                     <p style="margin: 10px 0 0 30px; font-size: 0.9em; color: #666;">
